# vision

./: CONTRIBUTING.md  LICENSE  README-processor.md  README-sample.md  README-vision.md  README.md  example.env
apps/: docker-compose.kafka.yml
apps/backend/processor/: pyproject.toml
apps/backend/processor/processor/: app.py
apps/backend/processor/processor/core/: config.py  log.py  logs.py
apps/backend/processor/processor/images/: agents.py  agents_helper.py  agents_topic.py  agents_transformer.py  commands.py  commands_helper.py  models.py  opencv_helper.py  workflow.py
apps/backend/processor/tests/: test_processor.py
apps/backend/processor/tests/core/: test_logs.py
apps/backend/processor/tests/images/: test_commands_helper.py  test_opencv_helper.py  test_workflow.py
docs/: real-time_processing.rst
